# multilingual-llm-eval

./: README.md  WHAT_TO_RUN.md  evaluate.sh  pyproject.toml  requirements.txt  run.sh
outputs/: metrics.csv  report.html
outputs/logs/: REPORT_SUMMARY.txt  sample_sentences_fin.jsonl  sample_sentences_fra.jsonl  sample_sentences_hin.jsonl  sample_sentences_nno.jsonl  sample_sentences_swh.jsonl  sample_sentences_tur.jsonl  sample_sentences_zho_Hans.jsonl
outputs/metrics/: metrics_full.csv  rankings.csv
outputs/report/: addendum_text.txt  report_final.html  segmentation_examples_fin.jsonl  segmentation_examples_fra.jsonl  segmentation_examples_hin.jsonl  segmentation_examples_nno.jsonl  segmentation_examples_swh.jsonl  segmentation_examples_tur.jsonl  segmentation_examples_zho_Hans.jsonl
src/: __init__.py  cli.py  config.py  main.py
src/analysis/: __init__.py  generate_rankings.py  linguistic_interpretation.py  rankings.py  segmentation_examples.py
src/data/: __init__.py  flores_loader.py
src/evaluation/: __init__.py  evaluator.py  oom_handler.py
src/metrics/: __init__.py  bootstrap_ci.py  bpc.py  combined.py  entropy.py  gzip_compression.py  per_sentence_metrics.py  perplexity.py  tokenizer_stats.py
src/models/: __init__.py  schemas.py
src/models/baselines/: char_ngram.py  gpt2_chinese_sanity.py  hf_transformer_eval.py  unigram.py
src/report/: __init__.py  generate_report.py
src/viz/: __init__.py  generate_plots.py  plotly_plots.py  plots.py
src/viz/templates/: report_template.html
